<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlusActivity">

    <ImageView
        android:id="@+id/img_Back"
        android:layout_width="43dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="138dp"
        android:text="@string/TitlePlus"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/plus1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/plus1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="47dp"
        android:layout_marginTop="9dp"
        android:text="@string/Plus1_Text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus1" />

    <ImageView
        android:id="@+id/plus2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/plus2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="168dp"
        android:layout_height="78dp"
        android:layout_marginTop="9dp"
        android:text="@string/Plus2_Text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus2" />

    <ImageView
        android:id="@+id/plus3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/plus3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="168dp"
        android:layout_height="78dp"
        android:layout_marginTop="7dp"
        android:text="@string/Plus3_Text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus3" />

    <ImageView
        android:id="@+id/plus4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/plus4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="168dp"
        android:layout_height="78dp"
        android:layout_marginTop="6dp"
        android:text="@string/Plus4_Text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus4" />

    <ImageView
        android:id="@+id/plus5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/plus5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="168dp"
        android:layout_height="78dp"
        android:layout_marginEnd="122dp"
        android:text="@string/Plus5_Text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus5" />

</androidx.constraintlayout.widget.ConstraintLayout>