<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProcessActivity">

    <ImageView
        android:id="@+id/img_Back"
        android:layout_width="43dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/item1"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/item1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/Item1_Text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item1" />

    <ImageView
        android:id="@+id/item2"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/item2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:text="@string/Item2_Text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item2" />

    <ImageView
        android:id="@+id/item3"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="43dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/item3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:text="@string/Item3_Text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item3" />

    <ImageView
        android:id="@+id/item4"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/item4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:text="@string/Item4_Text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item4" />

    <ImageView
        android:id="@+id/item5"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/item5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="23dp"
        android:text="@string/Item6_Text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item5" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>